2005-04-08  Johannes Schmid <jhs@cvs.gnome.org>
	
	Patch from James Liggett <krliggett@cox.net>:
	* src/source.c: Fixed gettext problem

2005-04-08  Johannes Schmid <jhs@cvs.gnome.org>

	Patches from the debian package from Rob Bradford <robster@debian.org>:
	* widgets/gnomefilelist.c: Fix pixbuf bug
	* src/debugger.c: Check if file is executable
	* src/utilities.c: Use correct data types

	* tagmanager/tm_workspace.c: Speed up tags generation
	Applied patch Igor V. Kovalenko - garrisonko@users.sf.net with fixes from
	HEAD. 
	
	* src/message-manager-private.h
	widgets/e-splash.c: Fixed GTK-Warnings

2005-04-07  Johannes Schmid <jhs@cvs.gnome.org>
	
	Patch from Giuseppe Corbelli <cowo@lugbs.linux.it>:
	* src/anjuta_cbs.c
	src/main_menubar.c:
	
	I noticed that in 1_2_0 branch custom menu accelerators are not
	saved/restored. I submitted a bug report on SF (bug #1082504)
	Here's a small patch that addresses the problem. Just a 
	gnome_app_ui_configure_configurable at the beginning of 
	create_main_menubar and
	gnome_accelerators_sync in on_anjuta_delete

2005-04-06  Johannes Schmid <jhs@cvs.gnome.org>
	
	Anonymous patch from SF Tracker
	* src/about.c
	src/launcher.c
	
	More 64-Bit fixes

	Patch from Visti Andresen sftalpa@users.sourceforge.net:
	* src/texteditor.c
	src/texteditor.h:
	
	Fixed a bug where anjuta did not recognize files that
	changed on disk.

2005-04-02  Johannes Schmid <jhs@cvs.gnome.org>
	
	* configure.in: Fixed build process
	* src/compiler_options.c: Fixed 64-Bit bug,
	thanks to Angel Vidal (Kry) <kry@amule.org>

2005-04-02  Johannes Schmid <jhs@cvs.gnome.org>
	
	Patch from James Liggett <jrliggett@cox.net>:
	* configure.in, data/Makefile.am
	src/Makefile.am, src/anjuta.c, src/anjuta.h, src/anjuta_cbs.c,
	src/anjuta_gui.c, src/debugger.c, src/gnome_project.c,
	src/project_dbase.c, src/project_dbase_gui.c
	src/project_type.c, src/project_type.h
	src/search_incremental.c, src/source.c:
	
	Fixed project generation and other things.
